@@ -205,7 +205,7 @@ asm_listing_generate (AsmSource * src)
 	
   listing = g_string_new("");
   g_string_append (listing, _("; Assembler generated listing; Not editable.\n"));
-  g_string_append (listing, _("; Generated by GNUSim8085: gnusim8085.sf.net\n"));
+  g_string_append_printf (listing, _("; Generated by GNUSim8085: %s\n"), PACKAGE_URL);
 	
   while ( bin[i] )
 	{
